--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bienvenido a Hyperblogt</title>
+    <title>Bienvenido a Hyperblogt 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
